[gd_scene load_steps=3 format=3 uid="uid://cw0s5g3bkwv2l"]

[ext_resource type="Script" uid="uid://dgjng3vbkbqg7" path="res://scripts/ui/Hud.gd" id="1_b35k5"]
[ext_resource type="Texture2D" uid="uid://d3swhue337hdh" path="res://graphix/sprites/heart.png" id="2_fls4u"]

[node name="HUD" type="CanvasLayer"]
layer = 4
offset = Vector2(1, 0)
transform = Transform2D(1, 0, 0, 1, 1, 0)
script = ExtResource("1_b35k5")

[node name="PauseButton" type="Button" parent="."]
offset_left = 27.0
offset_top = 19.0
offset_right = 82.0
offset_bottom = 50.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Pause"

[node name="TimerLabel" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -180.0
offset_top = 10.0
offset_right = -20.0
offset_bottom = 40.0
grow_horizontal = 0
grow_vertical = 0
text = "00:00.000"
horizontal_alignment = 2

[node name="HeartsContainer" type="HBoxContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -96.0
offset_top = 10.0
offset_right = 96.0
offset_bottom = 42.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 12
alignment = 1

[node name="Heart1" type="TextureRect" parent="HeartsContainer"]
custom_minimum_size = Vector2(42, 32)
layout_mode = 2
texture = ExtResource("2_fls4u")
stretch_mode = 3

[node name="Heart2" type="TextureRect" parent="HeartsContainer"]
custom_minimum_size = Vector2(42, 32)
layout_mode = 2
texture = ExtResource("2_fls4u")
stretch_mode = 3

[node name="Heart3" type="TextureRect" parent="HeartsContainer"]
custom_minimum_size = Vector2(42, 32)
layout_mode = 2
texture = ExtResource("2_fls4u")
stretch_mode = 3

[node name="BonusBar" type="ProgressBar" parent="."]
visible = false
custom_minimum_size = Vector2(240, 14)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -120.0
offset_top = 44.0
offset_right = 120.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 0
max_value = 1.0
step = 0.0
show_percentage = false

[node name="PauseLayer" type="ColorRect" parent="."]
process_mode = 2
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -3.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0, 0, 0, 0.552941)

[node name="PauseMenu" type="PanelContainer" parent="PauseLayer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -20.0
offset_right = 35.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MenuContainer" type="VBoxContainer" parent="PauseLayer/PauseMenu"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="GameOverLabel" type="Label" parent="PauseLayer/PauseMenu/MenuContainer"]
visible = false
layout_mode = 2
text = "Time survived: 00:00.000"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="PauseLayer/PauseMenu/MenuContainer"]
layout_mode = 2
text = "Resume"

[node name="RestartButton" type="Button" parent="PauseLayer/PauseMenu/MenuContainer"]
layout_mode = 2
text = "Restart"
